# tauclean

./: .coveragerc  .gitignore  .travis.yml  CODE_OF_CONDUCT.md  INSTALL.md  LICENSE  README.md  __init__.py  clean.py  fom.py  pbf.py  plotting.py  pyproject.toml  setup.py  simulate.py  tauclean.ipynb  tauclean.py
fom/: __init__.py  consistence.py  positivity.py  skewness.py
pbf/: __init__.py  thick.py  thin.py  uniform.py
scripts/: simulate  tauclean
tauclean/: __init__.py  clean.py  cli_simulate.py  cli_tauclean.py  fom.py  pbf.py  plotting.py
tests/: simulated_intrinsic_tau20ms_thin.txt  simulated_intrinsic_tau3ms_uniform.txt  simulated_profile_tau1ms_thick.txt  simulated_profile_tau20ms_thin.txt  simulated_profile_tau3ms_uniform.txt  test_clean.py  test_fom.py  test_pbf.py  test_plotting.py  test_sample.p
